* Turn off values_from_request for current request, so back button doesn't lose state
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5973 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -22,7 +22,6 @@ no_index:
     - DB
 recommends: 
   Apache2::Const: 0
-  Authen::CAS::Client: 0
   Cache::FileCache: 0
   Chart::Base: 0
   Class::Accessor::Named: 0
@@ -34,27 +33,23 @@ recommends:
   Devel::Gladiator: 0
   Devel::REPL: 0
   Devel::Size: 0
+  Email::Abstract: 0
   GD: 0
   GD::Graph: 0
-  HTML::Scrubber: 0
   Image::Info: 0
   LWPx::ParanoidAgent: 0
-  MIME::Base64::URLSafe: 0
   Module::CoreList: 0
   Module::Install::Admin: 0.50
   Module::Refresh: 0.09
-  Net::Akismet: 0
-  Net::LDAP: 0
   Net::OpenID::Consumer: 0
   Net::Server::Fork: 0
   Net::Server::PreFork: 0
   PAR::Dist::FromCPAN: 0
   Pod::Simple: 0
   Proc::ProcessTable: 0
-  Regexp::Common: 0
-  Regexp::Common::Email::Address: 0
   Template::Declare: 0.28
   Test::Base: 0.44
+  Test::Email: 0
   Test::HTML::Lint: 0
   Test::HTTP::Server::Simple: 0.02
   Test::MockModule: 0.05
@@ -73,7 +68,7 @@ requires:
   Class::Container: 0
   Class::Data::Inheritable: 0
   Class::Inspector: 1.2
-  Class::Trigger: 0.12
+  Class::Trigger: 0.13
   Clone: 0.27
   Compress::Zlib: 0
   Crypt::CBC: 0
@@ -106,7 +101,7 @@ requires:
   HTML::Mason::Plugin: 0
   HTTP::Cookies: 0
   HTTP::Date: 0
-  HTTP::Server::Simple: 0.28
+  HTTP::Server::Simple: 0.35
   HTTP::Server::Simple::Recorder: 0
   Hash::Merge: 0
   Hook::LexWrap: 0
@@ -115,6 +110,7 @@ requires:
   JSON::Syck: 0.29
   Jifty::DBI: 0.49
   LWP::UserAgent: 0
+  List::MoreUtils: 0
   Locale::Maketext::Extract: 0.20
   Locale::Maketext::Lexicon: 0.60
   Log::Log4perl: 1.04
@@ -125,9 +121,9 @@ requires:
   Module::Refresh: 0
   Module::ScanDeps: 0
   Object::Declare: 0.13
-  PadWalker: 0
   Params::Validate: 0
   SQL::ReservedWords: 0
+  SUPER: 0
   Scalar::Defer: 0.12
   Shell::Command: 0
   String::Koremutake: 0
@@ -150,5 +146,5 @@ requires:
   YAML::Syck: 0.71
   perl: 5.8.3
   version: 0
-tests: t/*.t t/*/*.t t/*/*/*.t t/*/*/*/*.t plugins/TabView/t/*.t
-version: 0.80408
+tests: t/*.t t/*/*.t t/*/*/*.t t/*/*/*/*.t plugins/TabView/t/*.t plugins/TabView/t/*/*/*.t
+version: 0.80913
