* Reduce dups and unnecessary views  * Config merging is now slightly smarter for specific listrefs  * Fix a test; though if TD had error handlers already, the fix would not have been needed
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6227 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Dispatcher/etc/config.yml
+++ b/t/TestApp-Dispatcher/etc/config.yml
@@ -22,12 +22,8 @@ framework:
   LogLevel: DEBUG
 
   Plugins: 
-    - 
-      SkeletonApp: {}
-
-    - 
-      CompressedCSSandJS: {}
-
+    - SkeletonApp: {}
+    - CompressedCSSandJS: {}
   PubSub: 
     Backend: Memcached
     Enable: ~
@@ -35,6 +31,7 @@ framework:
   TemplateClass: TestApp::Dispatcher::View
   View: 
     Handlers: 
+      - Jifty::View::Mason::Handler
       - Jifty::View::Static::Handler
       - Jifty::View::Declare::Handler
   Web: 
