(empty commit message)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6300 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Dispatcher/etc/config.yml
+++ b/t/TestApp-Dispatcher/etc/config.yml
@@ -24,6 +24,7 @@ framework:
   Plugins: 
     - SkeletonApp: {}
     - CompressedCSSandJS: {}
+    - ErrorTemplates: {}
   PubSub: 
     Backend: Memcached
     Enable: ~
