--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,25 @@
---- 
+---
 author: ~
-build_requires: 
+build_requires:
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.79'
 license: Perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Jifty
-no_index: 
-  directory: 
+no_index:
+  directory:
     - debian
     - doc
     - examples
-    - share
-    - plugins/*/t
     - inc
+    - share
     - t
-  package: 
+  package:
     - DB
-recommends: 
+recommends:
   Apache2::Const: 0
   Cache::FileCache: 0
   Chart::Base: 0
@@ -47,17 +46,16 @@ recommends:
   PAR::Dist::FromCPAN: 0
   Pod::Simple: 0
   Proc::ProcessTable: 0
-  Template::Declare: 0.28
   Test::Base: 0.44
   Test::Email: 0
   Test::HTML::Lint: 0
-  Test::HTTP::Server::Simple: 0.02
+  Test::HTTP::Server::Simple: 0.10
   Test::MockModule: 0.05
   Test::MockObject: 1.07
   Test::WWW::Declare: 0.01
   WWW::Facebook::API: 0.3.6
   XML::Simple: 0
-requires: 
+requires:
   App::CLI: 0.03
   CGI: 3.30
   CGI::Cookie::Splitter: 0
@@ -89,6 +87,7 @@ requires:
   Email::Send: 2.0
   Email::Simple: 2.003
   Email::Simple::Creator: 1.4
+  Exception::Class: 0
   Exporter::Lite: 0
   File::Find::Rule: 0
   File::MMagic: 0
@@ -111,8 +110,8 @@ requires:
   Jifty::DBI: 0.49
   LWP::UserAgent: 0
   List::MoreUtils: 0
-  Locale::Maketext::Extract: 0.20
-  Locale::Maketext::Lexicon: 0.60
+  Locale::Maketext::Extract: 0.35
+  Locale::Maketext::Lexicon: 0.77
   Log::Log4perl: 1.11
   MIME::Types: 0
   Module::CoreList: 0
@@ -126,10 +125,10 @@ requires:
   SUPER: 0
   Scalar::Defer: 0.12
   Shell::Command: 0
+  String::BufferStack: 1.12
   String::Koremutake: 0
-  Template::Declare: 0.26
+  Template::Declare: 0.36
   Test::Base: 0
-  Test::Log4perl: 0
   Test::LongString: 0
   Test::More: 0.62
   Test::Pod::Coverage: 0
@@ -146,5 +145,4 @@ requires:
   YAML::Syck: 0.71
   perl: 5.8.3
   version: 0
-tests: t/*.t t/*/*.t t/*/*/*.t t/*/*/*/*.t plugins/TabView/t/*.t plugins/TabView/t/*/*/*.t
-version: 0.80913
+version: 0.90220
