Move appropriate tests into the right dists, and split out Makefile.PL's
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6464 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/plugins/Attributes/t/TestApp-Plugin-Attributes/etc/config.yml
+++ b/plugins/Attributes/t/TestApp-Plugin-Attributes/etc/config.yml
@@ -23,32 +23,17 @@ framework:
   MailerArgs: []
 
   Plugins: 
-    - 
-      LetMe: {}
+    - AdminUI: {}
+    - CompressedCSSandJS: {}
+    - ErrorTemplates: {}
+    - Halo: {}
+    - LetMe: {}
+    - OnlineDocs: {}
+    - REST: {}
+    - SkeletonApp: {}
 
-    - 
-      SkeletonApp: {}
+    - Attributes: {}
 
-    - 
-      REST: {}
-
-    - 
-      Halo: {}
-
-    - 
-      ErrorTemplates: {}
-
-    - 
-      OnlineDocs: {}
-
-    - 
-      CompressedCSSandJS: {}
-
-    - 
-      AdminUI: {}
-
-    - 
-      Attributes: {}
   PubSub: 
     Backend: Memcached
     Enable: ~
