--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,11 @@
 ---
 author: ~
 build_requires:
-  ExtUtils::MakeMaker: 6.11
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.79'
+generated_by: 'Module::Install version 0.82'
 license: Perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -75,7 +77,7 @@ requires:
   Exporter::Lite: 0
   File::Find::Rule: 0
   File::MMagic: 0
-  File::ShareDir: 0.04
+  File::ShareDir: 1.00
   File::Spec: 3.14
   File::Temp: 0.15
   HTML::Entities: 0
@@ -91,7 +93,7 @@ requires:
   IPC::PubSub: 0.23
   IPC::Run3: 0
   JSON::Syck: 0.29
-  Jifty::DBI: 0.49
+  Jifty::DBI: 0.53
   LWP::UserAgent: 0
   List::MoreUtils: 0
   Locale::Maketext::Extract: 0.35
@@ -99,7 +101,7 @@ requires:
   Log::Log4perl: 1.11
   MIME::Types: 0
   Module::CoreList: 0
-  Module::Pluggable: 3.5
+  Module::Pluggable: 3.7
   Module::Pluggable::Object: 0
   Module::Refresh: 0
   Module::ScanDeps: 0
@@ -129,4 +131,4 @@ requires:
   YAML::Syck: 0.71
   perl: 5.8.3
   version: 0
-version: 0.90220
+version: 0.90409
